stl-test/Tests/coordinate/bounds/Negative/test2.cpp
//#fail
#include <coordinate>
int main(void)
{
    std::bounds<1> cord(-1);
}
